<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CryptoCall</string>
    <string name="app_subtitle">OpenPGP based VoIP</string>

    <!-- TODO: sync provider -->
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="ACCOUNT_TYPE">org.c99.SyncProviderDemo.account</string>
    <string name="username">Username:</string>
    <string name="username_hint">efudd</string>
    <string name="password">Password:</string>
    <string name="password_hint">w4bb1ts!</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating</string>

    <!-- Base Menu -->
    <string name="base_menu_about">About</string>
    <string name="base_menu_debug">Debug</string>
    <string name="base_menu_preferences">Preferences</string>
    <string name="base_menu_scan_barcode">Scan QR Code</string>
    <string name="base_menu_sync">Sync OpenPGP Keyrings with Contacts</string>
    <string name="base_menu_help">Help</string>

    <!-- Information and Share fragment -->
    <string name="base_information_fragment_tel">Telephone Number</string>
    <string name="base_information_fragment_nickname">Keyring Nickname</string>
    <string name="base_information_fragment_settings">Keyring Settings</string>
    <string name="base_information_fragment_share">Share Keyring</string>
    <string name="base_information_fragment_import">Import Keyring</string>
    <string name="base_information_fragment_share_with">Share with…</string>
    <string name="base_information_fragment_share_nfc">Share with NFC</string>
    <string name="base_information_fragment_upload">Upload to keyserver</string>
    <string name="base_information_fragment_import_from_qr_code">Import from QR Code</string>
    <string name="base_information_fragment_edit_keyring">Edit Keyring</string>
    <string name="base_information_fragment_select_keyring">Select Keyring</string>

    <!-- Debug fragment -->
    <string name="base_manual_connection_key">Key Id:</string>
    <string name="base_manual_connection_pgp_mail">PGP Email:</string>

    <!-- Wizard -->
    <string name="wizard_nickname">Nickname:</string>
    <string name="wizard_nickname_hint">Nickname</string>
    <string name="wizard_telephone_number_international">Telephone number (with international prefix, e.g., +49):</string>
    <string name="wizard_telephone_number">Telephone number:</string>
    <string name="wizard_telephone_number_hint">Telephone number</string>
    <string name="wizard_protected_email">PGP Email:</string>
    <string name="wizard_intro">This is the first time you started CryptoCall.\n\nHow do you want to proceed?</string>
    <string name="wizard_generate_keyring_intro">Please enter a nickname for CryptoCall and your current telephone number.\n\nAfter clicking Next, OpenPGP Keychain will present the generated keyring for verification. Please click Save after successful generation.</string>
    <string name="wizard_generate_keyring_radio">Generate PGP keyring (recommended)</string>
    <string name="wizard_select_keyring_radio">Select existing PGP keyring with CryptoCall ID (@cryptocall.org) for your current telephone number</string>
    <string name="wizard_select_keyring_intro">Please enter your current telephone number.\n\nAfter clicking Next, you have to select your existing keyring corresponding to your entered telephone number.</string>
    <string name="wizard_success_intro">Congratulations. The first time wizard finished successfully!</string>
    <string name="wizard_error_not_international">Not a valid international telephone number!</string>
    <string name="wizard_error_not_matching">Your entered telephone number does not match to the selected keyring! Please correct your choices!</string>
    <string name="wizard_error_blank">Please insert text!</string>

    <!-- Dialogs -->
    <string name="no_barcode_scanner_title">Install Barcode Scanner?</string>
    <string name="no_barcode_scanner">This application requires Barcode Scanner. Wouldyou like to install it?</string>
    <string name="status_service_notification_title">CryptoCall</string>
    <string name="status_service_notification_text_on">CryptoCall is enabled</string>
    <string name="status_service_notification_start">CryptoCall is enabled!</string>

    <!-- Buttons -->
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_back">Back</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>

    <!-- Activities -->
    <string name="activity_help_label">Help</string>
    <string name="activity_sending_sms_label">Sending SMS…</string>
    <string name="activity_received_sms_label">Received CryptoCall SMS!</string>
    <string name="activity_wizard_label">First time wizard</string>

    <!-- Base -->
    <string name="show_contact_call">Call with CryptoCall</string>
    <string name="show_contact_android_contact">Open Android Contact</string>
    <string name="activity_show_contact_label">Contact</string>
    <string name="base_tab_contacts">Contacts</string>
    <string name="base_tab_information">Information</string>
    <string name="base_tab_exchange">Exchange</string>
    <string name="base_tab_manual_connection">Manual Connection</string>
    <string name="base_contacts_list_emty">No contacts with @crytocall.org email address!</string>

    <!-- Help -->
    <string name="help_tab_about">About</string>
    <string name="help_tab_donate">Donate</string>
    <string name="help_tab_faq">FAQ</string>
    <string name="help_tab_problems">Problems</string>
    <string name="help_about_version">Version:</string>

    <!-- SMS activities -->
    <string name="sms_received_title">You received a cryptocall SMS. What to do?</string>
    <string name="sms_received_accept_button">Accept SMS and start SIP connection</string>
    <string name="sms_received_decline_button">Decline SMS (do nothing)</string>
    <string name="sms_sending_cancel_button">Cancel</string>
    <string name="sms_sending_title">Waiting for other side to receive SMS…</string>

    <!-- Status -->
    <string name="status_connection">Do you want to connect to %1$s:%2$s with email %3$s</string>
    <string name="status_sending">Sending CryptoCall SMS…</string>
    <string name="status_destination_invalid">SMS destination invalid!</string>
    <string name="status_sms_sent">SMS was send successfully!</string>
    <string name="status_sms_generic">Generic failure!</string>
    <string name="status_sms_no_service">No service (Are your device capable of sending SMS?)!</string>
    <string name="status_sms_null_pdu">Null PDU!</string>
    <string name="status_sms_radio_off">Radio off!</string>
    <string name="status_sms_delivered">SMS delivered successfully…</string>
    <string name="status_sms_not_delivered">SMS NOT delivered!</string>
    <string name="status_get_peer_pub_keyring">Get PGP public keyring of peer from OpenPGP Keychain…</string>
    <string name="status_get_my_secret_keyring">Get my PGP secret keyring from OpenPGP Keychain…</string>
    <string name="status_create_session">Create session with X509 cert and pub key information…</string>
    <string name="status_set_session">Setting session in SIP stack…</string>
    <string name="status_start_sip">Create account and start SIP stack…</string>
    <string name="status_start_call">Start call</string>
    <string name="status_problem_parsing_sms">Problem on parsing CryptoCall SMS! The format is not compatible with this version!</string>
    <string name="status_email_not_found">Email or OpenPGP keyring not found for this telephone number!</string>

</resources>