<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/base_menu_scan_barcode"
        android:showAsAction="always|withText"
        android:title="@string/base_menu_scan_barcode">
    </item>
    <item
        android:id="@+id/base_menu_sync"
        android:icon="@drawable/action_refresh"
        android:showAsAction="always|withText"
        android:title="@string/base_menu_sync">
    </item>
    <item
        android:id="@+id/base_menu_help"
        android:icon="@drawable/action_help"
        android:showAsAction="ifRoom|withText"
        android:title="@string/base_menu_help">
    </item>
    <item
        android:id="@+id/base_menu_preferences"
        android:showAsAction="never|withText"
        android:title="@string/base_menu_preferences">
    </item>

</menu>