<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/base_information_fragment_share"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/base_information_fragment_qr"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@android:color/white"
            android:focusable="true"
            android:scaleType="centerInside" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/base_information_fragment_share_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/abs__item_background_holo_dark"
                android:text="@string/base_information_fragment_share_with" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/divider" />

            <Button
                android:id="@+id/base_information_fragment_share_nfc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/abs__item_background_holo_dark"
                android:text="@string/base_information_fragment_share_nfc" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <Button
            android:id="@+id/base_information_fragment_upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abs__item_background_holo_dark"
            android:text="@string/base_information_fragment_upload" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/base_information_fragment_import"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/base_information_fragment_import_from_qr_code_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abs__item_background_holo_dark"
            android:text="@string/base_information_fragment_import_from_qr_code" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
    </LinearLayout>

</ScrollView>