<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/base_information_fragment_tel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/show_contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/base_information_fragment_nickname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/show_contact_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/show_contact_android_actions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/show_contact_call_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abs__item_background_holo_dark"
            android:drawablePadding="20dip"
            android:drawableRight="@drawable/call_contact"
            android:gravity="left|center_vertical"
            android:onClick="callOnClick"
            android:padding="15dip"
            android:text="@string/show_contact_call"
            android:textColor="@android:color/white"
            android:textSize="20dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <Button
            android:id="@+id/show_contact_android_contact_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abs__item_background_holo_dark"
            android:drawablePadding="20dip"
            android:drawableRight="@drawable/android_contacts"
            android:gravity="left|center_vertical"
            android:onClick="androidContactOnClick"
            android:padding="15dip"
            android:text="@string/show_contact_android_contact"
            android:textColor="@android:color/white"
            android:textSize="20dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
    </LinearLayout>

</ScrollView>